[gd_scene load_steps=6 format=3 uid="uid://b13gyny5n1n8f"]

[ext_resource type="Script" path="res://inDev/demoClones/clone_2.gd" id="1_n6vpo"]
[ext_resource type="Texture2D" uid="uid://rikv27f4dvrs" path="res://Assets/Characters/spritesheet_characters.png" id="3_vrn0x"]

[sub_resource type="CircleShape2D" id="CircleShape2D_x71wi"]
radius = 25.0

[sub_resource type="CircleShape2D" id="CircleShape2D_6k0ne"]
radius = 238.053

[sub_resource type="Gradient" id="Gradient_gxx2d"]
colors = PackedColorArray(0.956863, 0, 0, 1, 1, 1, 1, 1)

[node name="Clone" type="RigidBody2D"]
collision_layer = 2
collision_mask = 2
gravity_scale = 0.0
script = ExtResource("1_n6vpo")

[node name="Sprite2D" type="Sprite2D" parent="."]
texture = ExtResource("3_vrn0x")
region_enabled = true
region_rect = Rect2(55.8633, 174.649, 53.9761, 47.4461)
metadata/_edit_lock_ = true

[node name="CollisionShape2D" type="CollisionShape2D" parent="."]
shape = SubResource("CircleShape2D_x71wi")
metadata/_edit_lock_ = true

[node name="CloneRadius" type="Area2D" parent="."]
collision_mask = 4

[node name="CollisionShape2D" type="CollisionShape2D" parent="CloneRadius"]
shape = SubResource("CircleShape2D_6k0ne")

[node name="ShootTimer" type="Timer" parent="."]
one_shot = true

[node name="Bullets" type="Node2D" parent="."]
metadata/_edit_lock_ = true

[node name="LaserPoint" type="Line2D" parent="."]
points = PackedVector2Array(23, 10)
width = 3.0
default_color = Color(0.812114, 0.341512, 0.22677, 1)
gradient = SubResource("Gradient_gxx2d")

[node name="LaserDuration" type="Timer" parent="."]
wait_time = 0.1
one_shot = true

[connection signal="body_entered" from="CloneRadius" to="." method="_on_clone_radius_body_entered"]
[connection signal="body_exited" from="CloneRadius" to="." method="_on_clone_radius_body_exited"]
[connection signal="timeout" from="ShootTimer" to="." method="_on_shoot_timer_timeout"]
[connection signal="timeout" from="LaserDuration" to="." method="_on_laser_duration_timeout"]
